h1. CHANGELOG

h2. 2.4.8 August 26, 2013

* fix syntax error in 'gems' recipe

h2. 2.4.7 August 26, 2013

* fix Compass for using Foundation on Rails 4 (contributed by Mathias)
* eliminate Devise Invitable module as an option for Rails 4 (closes #243)
* improve prompt when asking for permission to drop existing databases
* only generate Cucumber steps using 'email_spec' when Cucumber is selected (closes #234)
* adjust routes when OmniAuth authentication is used with Rails 4 (https://github.com/RailsApps/rails-composer/issues/111)

h2. 2.4.6 August 25, 2013

* workaround for mongoid with Rails 4 (contributed by Rodrigo Russo)
* lock gem 'database_cleaner' at 1.0.1 (https://github.com/bmabey/database_cleaner/issues/224)
* add 'megatest' feature (contributed by Mark D. Blackwell)

h2. 2.4.5 July 27, 2013

* accommodate strong parameters in Rails 4 with Devise

h2. 2.4.4 July 24, 2013

* improve fix for CanCan 'seeds.rb' file for Rails 4.0
* add 'google_drive' gem to 'learn-rails' example application
* remove 'protected_attributes' gem for Rails 4.0
* remove requirement for 'libv8' gem when using 'therubyracer' (contributed by Nicola Lorusso)
* don't specify assets gem group if using Rails 4 (contributed by jconley88)
* don't add attr_accessible for Devise in Rails 4 (contributed by jconley88)
* refactored Rails 4 check into helper method (contributed by jconley88)
* specify MIT license in the gemspec (closes issue #228)

h2. 2.4.3 July 11, 2013

* fix specs to replace deprecated stub! and mock

h2. 2.4.2 July 11, 2013

* add 'rails-bootstrap' example application to the 'apps4' recipe
* remove creation of 'generators.rb' file (it was never used) from 'layout.erb'
* remove 'sdoc' gem from Rails 4 generated Gemfile
* modify 'email' recipe for Rails 4

h2. 2.4.1 June 25, 2013

* add 'protected_attributes' gem for Rails 4.0 (contributed by Vasily Ponomarev)
* fix Devise 'routes.rb' file for Rails 4.0 (contributed by Vasily Ponomarev)