@@ -115,7 +115,7 @@ FILE
     run 'bundle exec rake db:drop'
     run 'bundle exec rake db:mongoid:create_indexes'
   end
-  unless prefs[:skeep_seeds]
+  unless prefs[:skip_seeds]
     unless prefer :railsapps, 'rails-recurly-subscription-saas'
       run 'bundle exec rake db:seed'
     end
