@@ -1,5 +1,11 @@
 h1. CHANGELOG
 
+h2. 2.4.9 September 15, 2013
+
+* use Bootstrap 3 when Rails 4.0 is used; for Rails 3.2 use Bootstrap 2.3
+* add preference to specify ph/mysql user/password (contributed by Vitaly Kushner)
+* add preference to skip db:seed (contributed by Vitaly Kushner)
+
 h2. 2.4.8 August 26, 2013
 
 * fix syntax error in 'gems' recipe
